# VulkanRenderer

./: .gitignore  CMakeLists.txt  README.md  To-Do.md  main.cpp  run.py  saveSomewhere.txt  simpleObject.cpp  simpleObject.h
.cache/clangd/index/: Graphics.hpp.0FD631D6E002C626.idx  HelloTriangleApp.hpp.8E960B53CA2B0082.idx  MainApp.hpp.D0334AB62434FB0D.idx  fileManagment.hpp.03D564E0AD7A91CB.idx  main.cpp.253539061C151449.idx  vulkanhelpers.cpp.2FEB08AE88DF45D1.idx  vulkanhelpers.hpp.CE74E627EB7D25B6.idx
Shaders/compiled/: frag.spv  vert.spv
Shaders/src/: shader.frag  shader.vert
includes/: Graphics.hpp  HelloTriangleApp.hpp  MainApp.hpp  UniformManager.hpp  VBAllocator.hpp  fileManagment.hpp  vulkanhelpers.hpp
src/: VBAllocator.cpp  vulkanhelpers.cpp
